--- a/references.bib
+++ b/references.bib
@@ -208,3 +208,17 @@
   pages={278-282 vol.1},
   keywords={Classification tree analysis;Decision trees;Training data;Optimization methods;Testing;Tin;Stochastic processes;Handwriting recognition;Hidden Markov models;Multilayer perceptrons},
   doi={10.1109/ICDAR.1995.598994}}
+
+@inproceedings{Fagin1979,
+  author = {Fagin, Ronald},
+  title = {Normal forms and relational database operators},
+  year = {1979},
+  isbn = {089791001X},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  url = {https://doi.org/10.1145/582095.582120},
+  doi = {10.1145/582095.582120},
+  booktitle = {Proceedings of the 1979 ACM SIGMOD International Conference on Management of Data},
+  pages = {153–160},
+  location = {Boston, Massachusetts},
+  series = {SIGMOD '79}}
