--- a/courses.tex
+++ b/courses.tex
@@ -65,11 +65,11 @@ data science product, such as a web application, a mobile application, or a web 
 \begin{itemize}
   \itemsep 0pt
   \item \fullcite{Zumel2019}.
-  \item \fullcite{Hickham2023}.
+  \item \fullcite{Wickham2023}.
   \item \fullcite{Kelleher2018}.
 \end{itemize}
 
-The first two books (\citeauthor{Zumel2019,Hickham2023}) are available online for free.
+The first two books (\citeauthor{Zumel2019,Wickham2023}) are available online for free.
 
 % \paragraph{Must read:}
 % \begin{itemize}
