--- a/data.tex
+++ b/data.tex
@@ -52,10 +52,10 @@ consequences.
   \end{itemize}
 \end{mainbox}
 
-\textcite{Hickham2023} state that \emph{``data science is an exciting discipline that
+\textcite{Wickham2023} state that \emph{``data science is an exciting discipline that
 allows you to transform raw data into understanding, insight, and knowledge.''}
 
-\begin{mainbox}{Hickham's definition}
+\begin{mainbox}{Wickham's definition}
   \begin{itemize}
     \item Transform raw data into understanding, insight, and knowledge.
     \item Not necessarily a definition; describes the purpose of data science.
