--- a/references.bib
+++ b/references.bib
@@ -26,7 +26,7 @@
   publisher={Manning},
   edition=2}
 
-@book{Hickham2023,
+@book{Wickham2023,
   author={Hadley Wickham and Mine Çetinkaya-Rundel and Garrett Grolemund},
   title={R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
   year={2023},
