Added slide numbering.

--- a/history.tex
+++ b/history.tex
@@ -81,13 +81,13 @@ languages.}.
 His ideas and concepts laid the groundwork for the way we think about programming and data
 processing today.
 
-\begin{mainbox}{Peter Naur}
+\begin{slidebox}{Peter Naur}{}
   \begin{itemize}
     \item Danish computer scientist and mathematician.
     \item Coined the term ``data science'' in the 1960s.
     \item Proposed the term ``datalogy'' as an alternative to computer science.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 Naur disliked the term computer science and suggested it be called datalogy or data
 science.  In the 1960s, the subject was practised in Denmark under Peter
@@ -146,13 +146,13 @@ Mining, 7:414–417, 2014. reprinting of 2001 article in ISI Review, Vol 69.}.
 He advocates the expansion of statistics beyond theory into technical areas, significantly
 changing statistics.  Thus, it warranted a new name.
 
-\begin{mainbox}{William Cleveland}
+\begin{slidebox}{William Cleveland}{}
   \begin{itemize}
     \item American statistician.
     \item Proposed the discipline ``data science'' in 2001.
     \item Proposed the term ``data science'' as the new name for expansion of statistics.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 As a result, William Swain Cleveland II is credited to define data science as it is most
 used today. He is a highly influential figure in the fields of statistics, machine
@@ -179,13 +179,13 @@ In \cref{chap:data}, I dare to provide a (yet another) definition for the term. 
 argue that its object of study can be precisely established to support it as a new
 science.
 
-\begin{mainbox}{A new science}
+\begin{slidebox}{A new science}{}
   \begin{itemize}
     \item Both Naur and Cleveland do not see data science as an independent field of study.
     \item I argue that data science is not a buzzword.
     \item Our social and economical reality demands a new science.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \section{Timeline and historical markers}
 
@@ -272,7 +272,7 @@ credited with developing a form of the pie chart now known as the polar area
 diagram.  She also reformed healthcare in the United Kingdom and
 is considered the founder of modern nursing\footfullcite{Grajalez2013}.
 
-\begin{mainbox}{Florence Nightingale}
+\begin{slidebox}{Florence Nightingale}{}
   \begin{itemize}
     \item Passionate statistician.
     \item First person to use statistics to influence public and official opinion.
@@ -287,9 +287,9 @@ is considered the founder of modern nursing\footfullcite{Grajalez2013}.
     \item She is credited with developing a form of the pie chart now known as the polar area diagram.
     \item She reformed healthcare in the United Kingdom and is considered the founder of modern nursing.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
-\begin{mainbox}{Pre-digital age}
+\begin{slidebox}{Pre-digital age}{}
   \begin{itemize}
     \item Babylonian census (3,800 BC)
     \item Sumerian archaic (pre-cuneiform) writing (3,500 BC)
@@ -303,7 +303,7 @@ is considered the founder of modern nursing\footfullcite{Grajalez2013}.
     \item Typewriter (1868)
     \item Florence Nightingale (1820 -- 1910)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsubsection{Digital age}
 
@@ -345,14 +345,14 @@ scaled to a level that was unimaginable before.  However, ``where'' storing data
 not the only challenge.  ``How'' to store data is also a challenge.  The next period of
 history addresses this issue.
 
-\begin{mainbox}{Digital age}
+\begin{slidebox}{Digital age}{}
   \begin{itemize}
     \item Punched card (1725)
     \item 1890 census and Hollerith's tabulating machine (1890)
     \item ENIAC (1945)
     \item UNIVAC I used by the United Census Bureau (1950)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsubsection{Formal age}
 
@@ -371,14 +371,14 @@ sources. Once data is stored in a relational database, it is easy to query and m
 it. However, data is usually stored in different databases, and it is not always possible
 to combine them.
 
-\begin{mainbox}{Edgar Frank Codd}
+\begin{slidebox}{Edgar Frank Codd}{}
   \begin{itemize}
     \item British computer scientist
     \item Introduced the concept of a relational model for database management
     \item Standardized relational databases
     \item Led the development of Structured Query Language (SQL)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsubsection{Integrated age}
 
@@ -405,21 +405,21 @@ bottom-up, where the data marts are created first and then the data warehouse is
 from the data marts.
 }
 
-\begin{mainbox}{Ralph Kimball}
+\begin{slidebox}{Ralph Kimball}{}
   \begin{itemize}
     \item American computer scientist.
     \item Developed the bottom-up approach to data warehousing.
     \item From available data marts, the data warehouse is created.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
-\begin{mainbox}{Bill Inmon}
+\begin{slidebox}{Bill Inmon}{}
   \begin{itemize}
     \item American computer scientist.
     \item Developed the top-down approach to data warehousing.
     \item Design the data warehouse first and then the data marts are created from the data warehouse.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \textcolor{red}{
 One of the earliest and most famous case studies of the implementation of a data warehouse
@@ -461,7 +461,7 @@ NoSQL databases are non-relational databases that can store and process large vo
 unstructured, semi-structured, and structured data.  They are highly scalable and
 flexible, making them ideal for big data applications.
 
-\begin{mainbox}{The V's of big data}
+\begin{slidebox}{The V's of big data}{}
   \begin{itemize}
     \item Volume: The amount of data generated is massive
     \item Velocity: The speed at which data is generated is high
@@ -469,7 +469,7 @@ flexible, making them ideal for big data applications.
     \item Veracity: The quality of data generated is questionable
     \item Value: The value of data generated is high
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 Once massive amounts of unstructured data became available, the need for new data
 processing techniques arose.  The development of distributed computing frameworks such as
@@ -549,7 +549,7 @@ war with France in the 1790s.  He invented several types of diagram between 1780
 1800s, such as the line, area and bar chart of economic data, and the pie chart and circle
 graph to show proportions.
 
-\begin{mainbox}{Probability advent}
+\begin{slidebox}{Probability advent}{}
   \begin{itemize}
     \item Foundations by Blaise Pascal, Pierre de Fermat, Christiaan Huygens, Jacob
       Bernoulli, and others (\nth{17} century)
@@ -557,7 +557,7 @@ graph to show proportions.
     \item Gauss' method of least squares by Johann Carl Friedrich Gauss (1794)
     \item Playfair's data visualization by William Playfair (1780s -- 1800s)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsubsection{Learning from data}
 
@@ -609,7 +609,7 @@ the \citeauthor{Quinlan1986}'s ID3 algorithm\footfullcite{Quinlan1986} and its v
 
 See \cref{sub:tree} for more details about the technique.
 
-\begin{mainbox}{Learning from data (part I)}
+\begin{slidebox}{Learning from data (part I)}{}
   \begin{itemize}
     \item Fisher's discriminant analysis by Ronald Fisher (1930s)
     \item Shannon's information theory by Claude Shannon (1940s)
@@ -617,7 +617,7 @@ See \cref{sub:tree} for more details about the technique.
     \item Rosenblatt's perceptron by Frank Rosenblatt (1960s)
     \item Hunt inducing trees by John Ross Quinlan (1966)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \paragraph{Empirical risk minimization principle}
 
@@ -699,7 +699,7 @@ learning from intelligent teachers paradigm.  They regard the LUSI theory as the
 next step in the evolution of learning theory, calling it the ``complete statistical
 theory of learning''.
 
-\begin{mainbox}{Learning from data (part II)}
+\begin{slidebox}{Learning from data (part II)}{}
   \begin{itemize}
     \item Empirical risk minimization principle by Vladimir Vapnik and Alexey Chervonenkis (1968)
     \item Resurgence of neural networks (1986)
@@ -709,4 +709,4 @@ theory of learning''.
     \item Generative models (2010s)
     \item LUSI learning theory by Vladimir Vapnik and Rauf Izmailov (2010s)
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
