--- a/data.tex
+++ b/data.tex
@@ -43,24 +43,24 @@ and predictive analytics.''}  They compare the area with the operations research
 that data science focuses on implementing data-driven decisions and managing their
 consequences.
 
-\begin{mainbox}{Zumel and Mount's definition}
+\begin{slidebox}{Zumel and Mount's definition}{}
   \begin{itemize}
     \item Cross-disciplinary practice that draws on methods from data
     engineering, descriptive statistics, data mining, machine learning, and predictive
     analytics.
     \item Focuses on implementing data-driven decisions and managing their consequences.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \textcite{Wickham2023} state that \emph{``data science is an exciting discipline that
 allows you to transform raw data into understanding, insight, and knowledge.''}
 
-\begin{mainbox}{Wickham's definition}
+\begin{slidebox}{Wickham's definition}{}
   \begin{itemize}
     \item Transform raw data into understanding, insight, and knowledge.
     \item Not necessarily a definition; describes the purpose of data science.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 I find the first definition too restrictive once new methods and techniques are always
 under development.  We never know when new ``data-related'' methods will become obsolete
@@ -75,11 +75,10 @@ ambiguities or confusion.
 The second one is not really a definition.  However, it states clearly \emph{what} data
 science enables us to do.  From these thoughts, let's define the term.
 
-\begin{displayquote}
-  \em
+\begin{defbox}{}{ds}
   Data science is the study of computational methods to extract knowledge from
   measurable phenomena.
-\end{displayquote}
+\end{defbox}
 
 I want to highlight the meaning of some terms in this definition.  \emph{Computational methods} means
 that data science methods use computers to handle data and perform the calculations.
@@ -89,7 +88,7 @@ quantified in some way.  \emph{Raw data} are data collected directly from some s
 that have not been subject to any other manipulation by a software program or a human
 expert.  \emph{Data} is any piece of information that can be digitally stored.
 
-\begin{mainbox}{My definition}
+\begin{slidebox}{My definition}{}
   \begin{itemize}
     \item Data science is the study of computational methods to extract knowledge from
       measurable phenomena.
@@ -102,21 +101,21 @@ expert.  \emph{Data} is any piece of information that can be digitally stored.
       subject to any other manipulation by a software program or a human expert.
     \item Data is any piece of information that can be digitally stored.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \textcite{Kelleher2018} summarize very well the challenges data science takes up:
 ``extracting non-obvious and useful patterns from large data sets [\dots]; capturing,
 cleaning, and transforming [\dots] data; [storing and processing] big [\dots] data sets;
 and questions related to data ethics and regulation.''
 
-\begin{mainbox}{Kelleher and Tierney's challenges}
+\begin{slidebox}{Kelleher and Tierney's challenges}{}
   \begin{itemize}
     \item Extracting non-obvious and useful patterns from large data sets.
     \item Capturing, cleaning, and transforming data.
     \item Storing and processing big data sets.
     \item Questions related to data ethics and regulation.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 Data science contrasts with conventional sciences.  Usually, a ``science'' is named after
 its object of study.  Biology is the study of the life, Earth science studies the planet
@@ -162,14 +161,14 @@ reliable and ethical knowledge from huge amounts of data.
     new scientific questions -- such as data ethics, data collection, etc.
 \end{figurebox}
 
-\begin{mainbox}{Data science vs conventional sciences}
+\begin{slidebox}{Data science vs conventional sciences}{}
   \begin{itemize}
     \item Conventional sciences are model-driven: observation, hypothesis, and validation.
     \item In data science, we extract the knowledge directly and primarily from the data.
     \item Data science studies the computational methods and processes that can extract
       reliable and ethical knowledge from huge amounts of data.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \section{Definition components}
 
@@ -199,13 +198,13 @@ Finally, logic is the study of reasoning.  It studies the nature of reasoning an
 argumentation.  In particular, logic studies the nature of inference, validity, and
 fallacies.
 
-\begin{mainbox}{Philosophy}
+\begin{slidebox}{Philosophy}{}
   \begin{itemize}
     \item Epistemology: the study of knowledge.
     \item Ontology: the study of being.
     \item Logic: the study of reasoning.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 In the context of data science, we usually focus on phenomena from particular domain of
 expertise.  For example, we may be interested in the phenomena related to the stock
@@ -228,7 +227,7 @@ need to guarantee that the data we are collecting are relevant to the problem we
 trying to solve.  Incorrectly perception of the phenomena may lead to incorrect data
 collection, which may lead to incorrect conclusions.
 
-\begin{mainbox}{Phenomena}
+\begin{slidebox}{Phenomena}{}
   \begin{itemize}
     \item Phenomena are the source we use to understand the world around us.
     \item We use our senses to perceive phenomena.
@@ -239,7 +238,7 @@ collection, which may lead to incorrect conclusions.
     \item Incorrectly perception of the phenomena may lead to incorrect data collection,
       which may lead to incorrect conclusions.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsection{Measuments}
 
@@ -271,7 +270,7 @@ subfields, I highlight:
   \item Databases: the study of storing and retrieving data.
 \end{itemize}
 
-\begin{mainbox}{Measurable phenomena}
+\begin{slidebox}{Measurable phenomena}{}
   \begin{itemize}
     \item Measurable phenomena are those that we can quantify in some way.
     \item Data collection is the process of gathering data on targeted phenomenon in an
@@ -285,7 +284,7 @@ subfields, I highlight:
     \item Algorithms, data structures, and databases are important subfields of computer
       science when studying data collection, data storage, and data types.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsection{Knowledge extraction}
 
@@ -322,7 +321,7 @@ corrupt or inaccurate pieces of data.  Data transformation is the process of con
 data from one format or type to another.  Data integration is the process of combining
 data from different sources into a single, unified view.
 
-\begin{mainbox}{Knowledge extraction}
+\begin{slidebox}{Knowledge extraction}{}
   \begin{itemize}
     \item We use computational methods to extract knowledge from data.
     \item Statistics, machine learning, and artificial intelligence are important
@@ -337,7 +336,7 @@ data from different sources into a single, unified view.
     \item Data integration is the process of combining data from different sources into
       a single, unified view.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \section{Structured data}
 
@@ -397,7 +396,7 @@ easily grows out of control.  The data scientist must take responsibility for th
 consequences of their assumptions.  Good assumptions and hypothesis are a key part of the
 data science methodology.
 
-\begin{mainbox}{Structured data}
+\begin{slidebox}{Structured data}{}
   \begin{itemize}
     \item Structured data are data that are organized in a tabular format.
     \item Each row in the table represents a single observation.
@@ -411,7 +410,7 @@ data science methodology.
       how they affect the analysis.
     \item Inevitably, data scientists will make assumptions about the data types.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 When we work with structured data, two concepts are very important: database normalization
 and tidy data.  Database normalization is mainly focused on the data storage.  Tidy data is
@@ -527,7 +526,7 @@ implied by the primary key.  (In fact, the only functional dependency is the tri
 \to ABC$.)  In this case, to avoid redundancies and inconsistencies, we must split the
 relation into the relations $R_1[AB]$, $R_2[AC]$, and $R_3[BC]$.
 
-\begin{mainbox}{Database normalization}
+\begin{slidebox}{Database normalization}{}
   \begin{itemize}
     \item Minimizes data redundancy.
     \item Improves data integrity.
@@ -535,7 +534,7 @@ relation into the relations $R_1[AB]$, $R_2[AC]$, and $R_3[BC]$.
       which is usually not clear.
     \item Appropriate to store data.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsection{Tidy data}
 
@@ -547,7 +546,7 @@ a dataset.  It is based on the idea that a dataset is a collection of values, wh
   \item Each type of observational unit forms a table.
 \end{itemize}
 
-\begin{mainbox}{Tidy data}
+\begin{slidebox}{Tidy data}{}
   \begin{itemize}
     \item A dataset is a collection of values.
     \item Each value belongs to a variable.
@@ -556,7 +555,7 @@ a dataset.  It is based on the idea that a dataset is a collection of values, wh
     \item Clear semantics with focus on only one view of the data.
     \item Appropriate to analyze data.
   \end{itemize}
-\end{mainbox}
+\end{slidebox}
 
 \subsection{Bridging normalization and tidyness}
 
