--- a/references.bib
+++ b/references.bib
@@ -222,3 +222,17 @@
   pages = {153–160},
   location = {Boston, Massachusetts},
   series = {SIGMOD '79}}
+
+@article{Vincent1997,
+title = {A corrected 5NF definition for relational database design},
+journal = {Theoretical Computer Science},
+volume = {185},
+number = {2},
+pages = {379-391},
+year = {1997},
+note = {Theoretical Computer Science in Australia and New Zealand},
+issn = {0304-3975},
+doi = {https://doi.org/10.1016/S0304-3975(97)00050-9},
+url = {https://www.sciencedirect.com/science/article/pii/S0304397597000509},
+author = {Millist W. Vincent},
+keywords = {Relational database, Database design, Normalisation, Join dependencies, Fifth normal form}}
