--- a/handling.tex
+++ b/handling.tex
@@ -1,4 +1,5 @@
 \chapter{Data handling}
+\label{chap:handling}
 
 \chapterprecishere{%
   Tidy datasets are all alike, but every messy dataset is messy in its own way.
