--- a/references.bib
+++ b/references.bib
@@ -236,3 +236,15 @@ doi = {https://doi.org/10.1016/S0304-3975(97)00050-9},
 url = {https://www.sciencedirect.com/science/article/pii/S0304397597000509},
 author = {Millist W. Vincent},
 keywords = {Relational database, Database design, Normalisation, Join dependencies, Fifth normal form}}
+
+@article{Wickham2014,
+ title={Tidy Data},
+ volume={59},
+ url={https://www.jstatsoft.org/index.php/jss/article/view/v059i10},
+ doi={10.18637/jss.v059.i10},
+ number={10},
+ journal={Journal of Statistical Software},
+ author={Wickham, Hadley},
+ year={2014},
+ pages={1–23}
+}
